--- a/client/src/components/CustomNav/CustomNav.css
+++ b/client/src/components/CustomNav/CustomNav.css
@@ -1,6 +1,3 @@
-.carousel,.carousel .carousel-inner,.carousel .carousel-inner .active,.carousel .carousel-inner .carousel-item,.view,body,html {
-    height:100%;
-}
 nav {
     background-color:rgba(15, 58, 14) !important;
     border-radius: none !important;
@@ -13,4 +10,7 @@ nav {
 
 .navbar-default {
     background-image: none !important;
+    margin-bottom: 0px;
+    border: none;
+    border-radius: 0px;
 }
