--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,5 +1,8 @@
-img {
+.carousel,.carousel .carousel-inner,.carousel .carousel-inner .active,.carousel .carousel-inner .carousel-item,.view,body,html {
+    height:100%;
+}
+.carouselPicture {
     margin-left: auto;
     margin-right: auto;
-    width: 80vw;
+    width: 100%;
 }
