nav not ideal for mobile

--- a/client/src/components/CustomNav/CustomNav.css
+++ b/client/src/components/CustomNav/CustomNav.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: agilis;
+    src: url("../font/Agilis.otf");
+}
+
 nav {
     background-color:rgba(15, 58, 14) !important;
     border-radius: none !important;
@@ -6,6 +11,8 @@ nav {
 .navbar-brand, .navbar-nav>li>a {
     text-shadow: none;
     color: white !important;
+    height: 100%;
+    font-family: agilis;
 }
 
 .navbar-default {
@@ -13,4 +20,14 @@ nav {
     margin-bottom: 0px;
     border: none;
     border-radius: 0px;
+}
+
+.navbar-right {
+    font-size: 1.5em;
+    margin-right: 0px;
+    margin-top: 20px;
+}
+
+.logo {
+    width: 70%;
 }
