--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,8 +1,21 @@
+@font-face {
+    font-family: agilis;
+    src: url("../font/Agilis.otf");
+}
+
 .carousel,.carousel .carousel-inner,.carousel .carousel-inner .active,.carousel .carousel-inner .carousel-item,.view,body,html {
     height:100%;
 }
+
 .carouselPicture {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
+}
+
+.summary {
+    font-family: agilis;
+    font-size: 2em;
+    padding-top: 10px;
+    text-align: center;
 }
