changed footer added contact us page

--- a/client/src/components/CustomNav/CustomNav.css
+++ b/client/src/components/CustomNav/CustomNav.css
@@ -8,6 +8,8 @@ nav {
     border-radius: none !important;
 }
 
+/* at width: 516px add a media query for navbar-brand for width: 68vw */
+
 .navbar-brand, .navbar-nav>li>a {
     text-shadow: none;
     color: white !important;
