--- a/client/src/components/CustomNav/CustomNav.css
+++ b/client/src/components/CustomNav/CustomNav.css
@@ -22,6 +22,10 @@ nav {
     border: none;
     border-radius: 0px;
 }
+/* .navbar-default .navbar-toggle {
+    margin-top: auto;
+    margin-bottom: auto;
+} */
 
 .navbar-right {
     font-size: 1.5em;
@@ -35,9 +39,27 @@ nav {
 
 
 /* at width: 516px add a media query for navbar-brand for width: 68vw */
+@media screen and (max-width: 930px) {
+    .navbar-default .navbar-toggle {
+        margin-right: 0px;
+        margin-top: 30px;
+    }
 
-/* @media screen and (max-width: 930px) {
+    .logo-container {
+        width: 66vw;
+    }
+}
+
+@media screen and (max-width: 468px) {
     .navbar-brand {
-      width: 68vw  
+        width: 80%;
+    }
+
+    .logo {
+      width: 100%
     }  
-} */
+
+    .logo-container {
+        width: 66vw;
+    }
+}
