--- a/client/src/components/CustomNav/CustomNav.css
+++ b/client/src/components/CustomNav/CustomNav.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: agilis;
-    src: url("../font/Agilis.otf");
-}
-
 nav {
     background-color:rgba(15, 58, 14) !important;
     border-radius: none !important;
@@ -31,6 +26,8 @@ nav {
     font-size: 1.5em;
     margin-right: 0px;
     margin-top: 20px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .logo {
