added css to views

--- a/client/src/components/AdminView/AdminView.css
+++ b/client/src/components/AdminView/AdminView.css
@@ -13,6 +13,11 @@
     left: 0px;
 }
 
+.adminViewThumbnail {
+    border: 1px solid black !important;
+    border-image: none !important;
+}
+
 #editButton {
     display: none;
 }
