--- a/client/src/components/Cafe/Cafe.css
+++ b/client/src/components/Cafe/Cafe.css
@@ -7,11 +7,21 @@
     width: 400px;
     margin: auto;
     display: block;
-    border: 25px solid transparent;
+    border: 25px solid black;
     padding: 5px;
-    border-image: url("../img/border1.png") 100 stretch;
+    border-image: url("../imgBorder/border1.png") 100 stretch;
+}
+
+.thumbnail {
+    border: 25px solid transparent !important;
+    border-image: url("../imgBorder/border2.png") 95 stretch !important;
+    box-shadow: none;
+    -webkit-box-shadow: none;
 }
 
 .thumbnail>img {
     max-height: 50%;
+    border: 1px solid #377C21;
+    box-shadow: none;
+    -webkit-box-shadow: none;
 }
