--- a/client/src/components/Farmfresh/Farmfresh.css
+++ b/client/src/components/Farmfresh/Farmfresh.css
@@ -6,6 +6,15 @@ h1, h2, .thumbnail, button {
     font-family: agilis;
 }
 
+.coverPhotoFarm {
+    width: 500px;
+    margin: auto;
+    display: block;
+    border: 30px solid black;
+    border-radius: 25px;
+    border-image: url("../imgBorder/border3.png") 80 stretch;
+}
+
 .thumbnail {
     height: 400px;
 }
