--- a/client/src/components/AdminView/AdminView.css
+++ b/client/src/components/AdminView/AdminView.css
@@ -2,6 +2,11 @@
     padding: 25px;
 }
 
+.adminFarm {
+    height: 30em;
+    overflow: scroll;
+}
+
 .select {
     width: 9em;
     position: relative;
