--- a/client/src/components/Cafe/Cafe.css
+++ b/client/src/components/Cafe/Cafe.css
@@ -25,3 +25,9 @@
     box-shadow: none;
     -webkit-box-shadow: none;
 }
+
+@media (min-width: 990px) and (max-width: 2000px) {
+    .coverPhoto {
+        width: 30vw;
+    }
+}
