updated routes, and create a new admin page

--- a/client/src/components/AdminView/AdminView.css
+++ b/client/src/components/AdminView/AdminView.css
@@ -1,10 +1,9 @@
-.row {
-    padding: 25px;
+#adminviewcafe {
+    display: none;
 }
 
-.adminFarm {
-    height: 30em;
-    overflow: scroll;
+#adminviewlogin {
+    display: none;
 }
 
 .select {
@@ -13,17 +12,3 @@
     margin-top: 10px;
     left: 0px;
 }
-
-.adminViewThumbnail {
-    border: 1px solid black !important;
-    border-image: none !important;
-}
-
-#editButton {
-    display: none;
-}
-
-#submitButton {
-    display: inline;
-}
-
