--- a/client/src/components/AdminViewFarm/AdminViewFarm.css
+++ b/client/src/components/AdminViewFarm/AdminViewFarm.css
@@ -2,13 +2,14 @@
     padding: 25px;
 }
 
-.heading {
- text-decoration: underline;
-}
-
-.adminCafe {
+.adminFarm {
     height: 30em;
     overflow: scroll;
+}
+
+.adminViewThumbnail {
+    border: 1px solid black !important;
+    border-image: none !important;
 }
 
 #editButton {
@@ -18,5 +19,4 @@
 #submitButton {
     display: inline;
 }
-
 
