--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -3,8 +3,14 @@
 }
 
 .facebook {
-    height: 35em;
     overflow: scroll;
+}
+
+.noSidePadding {
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
 }
 
 @media (min-width: 768px) and (max-width: 1200px) {
