--- a/client/src/components/Cafe/Cafe.css
+++ b/client/src/components/Cafe/Cafe.css
@@ -4,7 +4,7 @@
 }
 
 .coverPhoto {
-    width: 60vw;
+    width: 80vw;
     margin: auto;
     display: block;
     border: 25px solid black;
@@ -26,8 +26,14 @@
     -webkit-box-shadow: none;
 }
 
-@media (min-width: 990px) and (max-width: 2000px) {
+@media (min-width: 600px) {
     .coverPhoto {
-        width: 30vw;
+        width: 60vw;
+    }
+}
+
+@media (min-width: 990px) {
+    .coverPhoto {
+        width: 45vw;
     }
 }
