--- a/client/src/components/CustomNav/CustomNav.css
+++ b/client/src/components/CustomNav/CustomNav.css
@@ -1,11 +1,11 @@
 nav {
-    background-color:rgba(15, 58, 14) !important;
+    background-color:rgb(0, 17, 116)!important;
     border-radius: none !important;
 }
 
 .navbar-nav>li {
     padding-top: 0.5em;
-    background-color: rgb(15, 58, 14);
+    background-color: rgb(0, 17, 116);
     font-size: 1.7em;
 }
 
@@ -22,7 +22,7 @@ nav {
     font-size: .8em;
 }
 .navbar-nav>li>a:hover {
-    color: rgb(52, 150, 50) !important;
+    color: rgb(0, 164, 252) !important;
 }
 
 .navbar-default {
@@ -48,6 +48,7 @@ nav {
 
 .logo {
     width: 70%;
+    height: 3em;
 }
 .waves-effect {
     position: relative;
@@ -121,6 +122,10 @@ nav {
   
   .waves-effect.waves-teal .waves-ripple {
     background-color: rgba(0, 150, 136, 0.7);
+  }
+
+  .waves-effect.waves-blue .waves-ripple {
+    background-color: rgba(33, 165, 221, 0.7);
   }
 
 
